# Veritensor

./: .pre-commit-hooks.yaml  Dockerfile  README.md  action.yml  entrypoint.sh  pyproject.toml  veritensor.yaml
scanner/: Dockerfile  pyproject.toml
scanner/src/aegis/cli/: main.py
scanner/src/aegis/core/: cache.py  config.py
scanner/src/aegis/engines/hashing/: calculator.py  readers.py
scanner/src/aegis/engines/static/: keras_engine.py
scanner/src/aegis/integrations/: cosign.py  huggingface.py
scanner/tests/integration/: test_flow.py
scanner/tests/unit/: test_pickle.py
scanner/tests/utils/: malware_gen.py
src/veritensor/cli/: main.py
src/veritensor/core/: cache.py  streaming.py
src/veritensor/engines/content/: injection.py
src/veritensor/engines/data/: dataset_engine.py
src/veritensor/engines/hashing/: readers.py
src/veritensor/engines/static/: notebook_engine.py  pickle_engine.py  rules.py  signatures.yaml
tests/: conftest.py
tests/integration/: test_flow.py
tests/unit/: test_cache_sqlite.py  test_dependency_engine.py  test_rag.py  test_telemetry.py
