[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis-scanner"
version = "4.1.0"
description = "AI Model Security Scanner & Gatekeeper"
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "huggingface_hub>=0.19.0",
    # Опциональные зависимости (можно убрать, если не нужны)
    # "h5py",  # Для старых Keras файлов
    # "safetensors" # Если будем использовать официальную либу вместо своего ридера
]

[project.scripts]
aegis = "aegis.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]
